2006-10-17  Francis Kung  <fkung@redhat.com>

	PR 29450
	* gnu/java/awt/peer/gtk/FreetypeGlyphVector.java
	(getLogicalBounds): Translate individual glyphs before appending bounds.
	(getOutline): Translate individual glyphs before appending outline.

2006-10-17  Cameron McCormack  <cam@mcc.id.au>

	PR 29014
	* java/awt/font/TextLayout.java
	(bidi): New field.
	(constructor): Store bidi in field.
	(getCharacterLevel): Implemented.

2006-10-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/TransferHandler.java
	(PropertyTransferable): New inner class. Handles transfers
	from component properties.
	(createTransferable): Implemented.

2006-10-17  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
	(drawComposite): Ensure	composite does not extend beyond buffer
	bounds.
	* java/awt/image/Raster.java
	(createChild): Ensure child does not extend beyond parent's
	bounds.
	* java/awt/image/WritableRaster.java
	(createWritableChild): Ensure child does not extend beyond
	parent's bounds.

2006-10-17  Jeroen Frijters  <jeroen@frijters.net>

	* native/jni/classpath/jcl.c
	(JNI_OnLoad): Corrected calling convention.

2006-10-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/TransferHandler.java
	(propertyName): New field.
	(TransferHandler(String)): Store property name in field.
	(canImport): Implemented stub method.
	(exportDone): This is a no-op. Removed not-implemented mark.
	(getPropertyDataFlavor): New helper method.
	(getPropertyDescriptor): New helper method.

2006-10-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/AbstractButton.java
	(AccessibleJButton.getAfterIndex): Implemented.
	(AccessibleJButton.getAtIndex): Implemented.
	(AccessibleJButton.getBeforeIndex): Implemented.
	(AccessibleJButton.getCharacterAttribute): Completed incomplete
	method implementation.

2006-10-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JLabel.java
	(AccessibleJLabel.getIndexAtPoint): Implemented.